--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
     "bootstrap": "^3.3.7",
+    "config-lite": "^2.1.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-formidable": "^1.0.0",
     "express-session": "^1.15.5",
     "mongodb": "^2.2.31",
+    "mongolass": "^3.1.5",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "sha1": "^1.1.1"
   }
 }
